Make sure nothing covers it

--- a/src/assets/scss/_nav.scss
+++ b/src/assets/scss/_nav.scss
@@ -7,6 +7,7 @@ header {
   width: 100%;
   margin-top: 0;
   background-color: var.$black;
+  z-index: 9999;
 }
 
 .nav {
